hphp/test/zend/good/Zend/tests/access_modifiers_002.php.expectf

Fatal error: Multiple access type modifiers are not allowed: properties of test in %s/access_modifiers_002.php on line 4
